# notifications

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/auth/: __init__.py  dependencies.py  jwt.py
app/constants/: __init__.py  notification_type_enum.py  time_in_second_enum.py
app/exception_handlers/: auth.py  notification.py  token.py
app/exceptions/: __init__.py  auth.py  notification.py  token.py
app/models/: __init__.py  notification.py  user.py
app/routers/: auth.py  notifications.py
app/schemas/: __init__.py  auth.py  notification.py  user.py
app/services/: __init__.py  auth.py  notifications.py
app/settings/: __init__.py  base.py  database.py  jwt_auth.py  logger.py
tests/: conftest.py
tests/integration/: conftest.py  utils.py
tests/integration/auth/: test_login.py  test_refresh_token.py  test_register.py
tests/integration/notifications/: test_notifications.py
